--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
+*{
+  margin:0px;
+  padding:0px;
+  box-sizing: border-box;
+  /*background-color: red;*/
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+html, body{
+  background-color: rgb(166, 242, 255);
+  width:100%;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+body{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar{
+  background-color: rgb(120, 170, 194);
+  padding:0px 0px;
+  margin:0px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+}
+
+/*button, input{
+  margin: 2px 20px;
+}*/
+.reset{
+  margin: 2px 20px;   
+}
+
+input{
+  margin: 2px 3px;
+}.butt{
+  
+}
+
+.color_ip{
+  width: 14em;
+  padding: 0px 2px;
+  margin: 2px 15px;
+}
+
+.size_ipr{
+  width :40px;
+}
+.size_ipc{
+  width :40px;
+}
+
+.container{
+  --sizeofgridr: 100;
+  --sizeofgridc: 100;
+  background-color: rgb(6, 1, 7);
+  height: 100vw;
+  max-height:95vh;
+  width: 100vw;
+  max-width: 100vh;
+  display:grid;
+  grid-template-columns: repeat(var(--sizeofgridc), 1fr);
+  grid-template-rows: repeat(var(--sizeofgridr), 1fr);
+  gap: 0px;
+  padding:3px;
+}
+.pixel{
+  background-color:rgb(255, 255, 255);
+  border-radius: 0px;
+  /* hover: border: '1px solid red', */
+}:hover {
+  border: '1px solid red'
+}.fr{
+  position: absolute; /*or fixed*/
+  right: 3px;
+} button {
+  display: inline-block;
+  background-color: #7b38d8;
+  border-radius: 10px;
+  border: 4px double #cccccc;
+  color: #eeeeee;
+  text-align: center;
+  font-size: medium;
+  padding: 5px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+button:hover {
+  background-color: #f7c2f9;
+}
+button:hover span {
+  padding-right: 25px;
+}
+button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
