--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,11 @@ body{
   padding:0px 0px;
   margin:0px;
   display:flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 100%;
 }
 
 /*button, input{
